# safe-bikes-lanes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: android-apk.yml  pages.yml  refresh-data.yml
pipeline/: aerial.py  aerial_audit.py  build_graph.py  config.py  elevation.py  export_web.py  fetch.py  mapillary_check.py  review_page.py
scripts/: get_wzdx_key.sh  publish-data.sh
server/: app.py
tests/: conftest.py  test_aerial.py  test_pipeline.py  test_server.py
web/: .gitignore  app.js  capacitor.config.ts  data.js  hazards.js  index.html  manifest.json  native.js  nav.js  package-lock.json  package.json  places.js  playwright.config.ts  playwright.native.config.ts  rides.js  router.js  sharecard.js  sw.js  tiles.js  tsconfig.json  types.js  vitest.config.ts
web/android/: capacitor.settings.gradle
web/android/app/: .gitignore  build.gradle  capacitor.build.gradle
web/data/: construction.geojson  elevation.geojson  gateways.geojson  heatmap.geojson  keys.json  lanemap.geojson  meta.json  pois.geojson
web/data/nettiles/: 107_50.json  107_51.json  107_52.json  107_53.json  107_54.json  107_55.json  107_56.json  107_57.json  107_58.json  107_59.json  107_60.json  107_61.json  107_62.json  (+684 more)
web/scripts/: assemble.sh
web/src/: app.ts  data.ts  hazards.ts  native.ts  nav.ts  places.ts  rides.ts  router.ts  sharecard.ts  tiles.ts  types.ts
web/tests/: hazards.test.ts  nav.test.ts  places.test.ts  rides.test.ts  router.test.ts  sharecard.test.ts  tiles.test.ts
web/tests-e2e/: app.spec.ts  features.spec.ts
web/tests-e2e-native/: native.spec.ts
(+702 files in other folders)
